[gd_scene load_steps=3 format=3 uid="uid://du10o4rwgckb2"]

[ext_resource type="Script" path="res://Scripts/enemy_zone.gd" id="1_hgogc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gu2k"]
size = Vector2(864, 376)

[node name="Enemy Zone" type="Area2D"]
process_mode = 1
script = ExtResource("1_hgogc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_3gu2k")

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
